--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           REPO=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
           IMAGE=ghcr.io/$REPO/traefik-cert-watcher:latest
-          docker build -t $IMAGE ./Dockerfile
+          docker build -t $IMAGE .
 
       - name: Push Docker image
         run: |
